@@ -889,11 +889,15 @@ void CFocusManager::CalFocusData(float inX, float inY)
 BOOL CFocusManager::FocusReady()
 {
   FocusTable focTmp;
+  int magInd;
   if (!mScope)
     return false;
   if (mWinApp->GetSTEMMode())
     return (mSFnormalizedSlope[mScope->GetProbeMode()] != 0.);
-  return (GetFocusCal(mScope->FastMagIndex(), mWinApp->GetCurrentCamera(), 
+  magInd = mScope->FastMagIndex();
+  if (magInd < mScope->GetLowestMModeMagInd())
+    return magInd > 0 && mScope->GetStandardLMFocus(magInd) > -900.;
+  return (GetFocusCal(magInd, mWinApp->GetCurrentCamera(), 
     mScope->GetProbeMode(), mScope->FastAlpha(), focTmp) != 0);
 }
 
